--- a/GC_MovieDatabase_Dapper/Views/Movierentals/SearchResult.cshtml
+++ b/GC_MovieDatabase_Dapper/Views/Movierentals/SearchResult.cshtml
@@ -11,5 +11,7 @@
     </ul>
 }
 
+<h3><a class="nav-link text-dark" asp-area="" asp-controller="Movierentals" asp-action="Search">Search again</a></h3>
+
 
 
