--- a/GC_MovieDatabase_Dapper/Views/Movierentals/Registration.cshtml
+++ b/GC_MovieDatabase_Dapper/Views/Movierentals/Registration.cshtml
@@ -16,15 +16,15 @@
     <input asp-for="Runtime" class="form-control" />
     <span asp-validation-for="Runtime" class="text-danger"></span><br /><br />
 
-    <label asp-for="Category" class="control-label"></label>
-    <select asp-for="Category">
+    <label asp-for="Genre" class="control-label"></label>
+    <select asp-for="Genre">
         <option value="Animation">Animation</option>
         <option value="Horror">Horror</option>
         <option value="Drama">Drama</option>
         <option value="Action">Action</option>
         <option value="Comedy">Comedy</option>
     </select><br />
-    <span asp-validation-for="Category" class="text-danger"></span><br /><br />
+    <span asp-validation-for="Genre" class="text-danger"></span><br /><br />
 
     <input type="submit" />
 
