--- a/GC_MovieDatabase_Dapper/Views/Movierentals/Search.cshtml
+++ b/GC_MovieDatabase_Dapper/Views/Movierentals/Search.cshtml
@@ -1,13 +1,13 @@
 ﻿
 <h2>Search by Title</h2>
-<form action="SearchByTitle" method="post">
-    <input type="text" name="s" class="form-control" maxlength="30"/><br />
+<form action="SearchResult" method="post">
+    <input type="text" name="Title" class="form-control" maxlength="30"/><br />
     <input type="submit" />
 </form><br /><br />
 
 <h2>Search by Genre</h2>
-<form action="SearchByGenre" method="post">
-    <select name="s">
+<form action="SearchResult" method="post">
+    <select name="Genre">
         <option value="Animation">Animation</option>
         <option value="Horror">Horror</option>
         <option value="Drama">Drama</option>
