--- a/GC_MovieDatabase_Dapper/Views/Shared/_Layout.cshtml
+++ b/GC_MovieDatabase_Dapper/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movierentals" asp-action="ListMovies">List Movies</a>
                         </li>
+                        <li>
+                        <li><a class="nav-link text-dark" asp-area="" asp-controller="Movierentals" asp-action="Search">Search</a></li>
+                        </li>
                     </ul>
                 </div>
             </div>
